# BBGW-L3G4200D

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  logfile.h  main.c  main.h  ps_logfile.c  ps_main.c
tool/: bbgw_access.sh  build.sh  debug.sh  scp_bbgw.sh
toolchain/gcc-linaro-6.5.0-2018.12-x86_64_arm-linux-gnueabihf/gcc-linaro-6.5.0-2018.12-x86_64_arm-linux-gnueabihf/arm-linux-gnueabihf/libc/usr/include/bits/: time.h
user_driver/: CMakeLists.txt  i2c_driver.c  i2c_driver.h  l3g4.c  l3g4.h
user_driver/bbgw_driver/: iolib.c
user_driver/linux/: time.h
